/*
 * Copyright (C) 2009 Google Inc.  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Definition of keycodes used by the AnymoteProtocol.

syntax    = "proto2";

option java_outer_classname    = "Key";
option java_package    = "com.google.anymote";
option optimize_for    = LITE_RUNTIME;

enum Code {
    KEYCODE_UNKNOWN            = 0;
    KEYCODE_SOFT_LEFT          = 1;
    KEYCODE_SOFT_RIGHT         = 2;
    KEYCODE_HOME               = 3;
    KEYCODE_BACK               = 4;
    KEYCODE_CALL               = 5;
    KEYCODE_0                  = 7;
    KEYCODE_1                  = 8;
    KEYCODE_2                  = 9;
    KEYCODE_3                  = 10;
    KEYCODE_4                  = 11;
    KEYCODE_5                  = 12;
    KEYCODE_6                  = 13;
    KEYCODE_7                  = 14;
    KEYCODE_8                  = 15;
    KEYCODE_9                  = 16;
    KEYCODE_STAR               = 17;
    KEYCODE_POUND              = 18;
    KEYCODE_DPAD_UP            = 19;
    KEYCODE_DPAD_DOWN          = 20;
    KEYCODE_DPAD_LEFT          = 21;
    KEYCODE_DPAD_RIGHT         = 22;
    KEYCODE_DPAD_CENTER        = 23;
    KEYCODE_VOLUME_UP          = 24;
    KEYCODE_VOLUME_DOWN        = 25;
    KEYCODE_POWER              = 26;
    KEYCODE_CAMERA             = 27;
    KEYCODE_A                  = 29;
    KEYCODE_B                  = 30;
    KEYCODE_C                  = 31;
    KEYCODE_D                  = 32;
    KEYCODE_E                  = 33;
    KEYCODE_F                  = 34;
    KEYCODE_G                  = 35;
    KEYCODE_H                  = 36;
    KEYCODE_I                  = 37;
    KEYCODE_J                  = 38;
    KEYCODE_K                  = 39;
    KEYCODE_L                  = 40;
    KEYCODE_M                  = 41;
    KEYCODE_N                  = 42;
    KEYCODE_O                  = 43;
    KEYCODE_P                  = 44;
    KEYCODE_Q                  = 45;
    KEYCODE_R                  = 46;
    KEYCODE_S                  = 47;
    KEYCODE_T                  = 48;
    KEYCODE_U                  = 49;
    KEYCODE_V                  = 50;
    KEYCODE_W                  = 51;
    KEYCODE_X                  = 52;
    KEYCODE_Y                  = 53;
    KEYCODE_Z                  = 54;
    KEYCODE_COMMA              = 55;
    KEYCODE_PERIOD             = 56;
    KEYCODE_ALT_LEFT           = 57;
    KEYCODE_ALT_RIGHT          = 58;
    KEYCODE_SHIFT_LEFT         = 59;
    KEYCODE_SHIFT_RIGHT        = 60;
    KEYCODE_TAB                = 61;
    KEYCODE_SPACE              = 62;
    KEYCODE_EXPLORER           = 64;
    KEYCODE_ENTER              = 66;
    KEYCODE_DEL                = 67;
    KEYCODE_GRAVE              = 68;
    KEYCODE_MINUS              = 69;
    KEYCODE_EQUALS             = 70;
    KEYCODE_LEFT_BRACKET       = 71;
    KEYCODE_RIGHT_BRACKET      = 72;
    KEYCODE_BACKSLASH          = 73;
    KEYCODE_SEMICOLON          = 74;
    KEYCODE_APOSTROPHE         = 75;
    KEYCODE_SLASH              = 76;
    KEYCODE_AT                 = 77;
    KEYCODE_FOCUS              = 80;
    KEYCODE_PLUS               = 81;
    KEYCODE_MENU               = 82;
    KEYCODE_SEARCH             = 84;
    KEYCODE_MEDIA_PLAY_PAUSE   = 85;
    KEYCODE_MEDIA_STOP         = 86;
    KEYCODE_MEDIA_NEXT         = 87;
    KEYCODE_MEDIA_PREVIOUS     = 88;
    KEYCODE_MEDIA_REWIND       = 89;
    KEYCODE_MEDIA_FAST_FORWARD = 90;
    KEYCODE_MUTE               = 91;
    KEYCODE_CTRL_LEFT          = 92;
    KEYCODE_CTRL_RIGHT         = 93;
    KEYCODE_INSERT             = 94;
    KEYCODE_PAUSE              = 95;
    KEYCODE_PAGE_UP            = 96;
    KEYCODE_PAGE_DOWN          = 97;
    KEYCODE_PRINT_SCREEN       = 98;

    KEYCODE_INFO               = 103;
    KEYCODE_WINDOW             = 104;

    KEYCODE_BOOKMARK           = 110;
    KEYCODE_CAPS_LOCK          = 111;
    KEYCODE_ESCAPE             = 112;
    KEYCODE_META_LEFT          = 113;
    KEYCODE_META_RIGHT         = 114;
    KEYCODE_ZOOM_IN            = 115;
    KEYCODE_ZOOM_OUT           = 116;
    KEYCODE_CHANNEL_UP         = 117;
    KEYCODE_CHANNEL_DOWN       = 118;

    KEYCODE_LIVE               = 120;
    KEYCODE_DVR                = 121;
    KEYCODE_GUIDE              = 122;
    KEYCODE_MEDIA_SKIP_BACK    = 123;
    KEYCODE_MEDIA_SKIP_FORWARD = 124;
    KEYCODE_MEDIA_RECORD       = 125;
    KEYCODE_MEDIA_PLAY         = 126;

    KEYCODE_PROG_RED           = 128;
    KEYCODE_PROG_GREEN         = 129;
    KEYCODE_PROG_YELLOW        = 130;
    KEYCODE_PROG_BLUE          = 131;
    KEYCODE_BD_POWER           = 132;
    KEYCODE_BD_INPUT           = 133;
    KEYCODE_STB_POWER          = 134;
    KEYCODE_STB_INPUT          = 135;
    KEYCODE_STB_MENU           = 136;
    KEYCODE_TV_POWER           = 137;
    KEYCODE_TV_INPUT           = 138;
    KEYCODE_AVR_POWER          = 139;
    KEYCODE_AVR_INPUT          = 140;
    KEYCODE_AUDIO              = 141;
    KEYCODE_EJECT              = 142;
    KEYCODE_BD_POPUP_MENU      = 143;
    KEYCODE_BD_TOP_MENU        = 144;
    KEYCODE_SETTINGS           = 145;
    KEYCODE_SETUP              = 146;

    // Pointer buttons
    BTN_FIRST                  = 256;
    BTN_MISC                   = 256;
    BTN_0                      = 256;
    BTN_1                      = 257;
    BTN_2                      = 258;
    BTN_3                      = 259;
    BTN_4                      = 260;
    BTN_5                      = 261;
    BTN_6                      = 262;
    BTN_7                      = 263;
    BTN_8                      = 264;
    BTN_9                      = 265;

    BTN_MOUSE                  = 272;
    BTN_LEFT                   = 272;
    BTN_RIGHT                  = 273;
    BTN_MIDDLE                 = 274;
    BTN_SIDE                   = 275;
    BTN_EXTRA                  = 276;
    BTN_FORWARD                = 277;
    BTN_BACK                   = 278;
    BTN_TASK                   = 279;
}

enum Action {
    // Key released
    UP     = 0;
    // Key pressed
    DOWN   = 1;
}
